# simple-logger

./: CMakeLists.txt  logger.cpp  logger.h  logger_test.cpp  main.cpp  robot_test.cpp
libs/include/: agent.h  error_handle.h  logger.h
libs/src/: CMakeLists.txt  error_handle.cpp  iostream.gcov  logger.cpp  logger.cpp.gcov
logger/: CMakeLists.txt  logger.cpp  logger.h
robot-test/: Logger.robot
tests/: CMakeLists.txt
tests/include/: agentmock.h  mock.h
tests/src/: CMakeLists.txt  mock.cpp
